fixes #76 - workaround for IE11 vertical alignment

--- a/assets/less/custom.less
+++ b/assets/less/custom.less
@@ -1708,6 +1708,13 @@ thead{
 }
 */
 
+html[data-useragent*='rv:11.0'] .toggle-on>span,
+html[data-useragent*='rv:11.0'] .toggle-off>span {
+  position:relative;
+  top:9px;
+  box-shadow: none;
+}
+
 .toggle-handle {
     -webkit-transform: rotate(45deg);
        -moz-transform: rotate(45deg);
@@ -1716,6 +1723,7 @@ thead{
     transform: rotate(45deg);
     background-color: #fff;
     width:32px;
+    border: 0px 1px #fff;
 }
 
 /* user login and registration */
